Fix image loading by removing UI images from LFS tracking
- Updated .gitattributes to only track photography folder images with LFS
- Restored main UI images (logos, thumbnails, headshots) as normal git files
- Photography images in subdirectories remain in LFS for efficiency
- This fixes the broken image loading in portfolio and about sections

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-*.jpg filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
+public/outdoor[[:space:]]photography/*.jpg filter=lfs diff=lfs merge=lfs -text
+public/outdoor[[:space:]]photography/*.png filter=lfs diff=lfs merge=lfs -text
+public/music[[:space:]]photography/*.jpg filter=lfs diff=lfs merge=lfs -text
+public/music[[:space:]]photography/*.png filter=lfs diff=lfs merge=lfs -text
+public/lifestyle[[:space:]]photography/*.jpg filter=lfs diff=lfs merge=lfs -text
+public/lifestyle[[:space:]]photography/*.png filter=lfs diff=lfs merge=lfs -text
