--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ public/music[[:space:]]photography/*.jpg filter=lfs diff=lfs merge=lfs -text
 public/music[[:space:]]photography/*.png filter=lfs diff=lfs merge=lfs -text
 public/lifestyle[[:space:]]photography/*.jpg filter=lfs diff=lfs merge=lfs -text
 public/lifestyle[[:space:]]photography/*.png filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
