--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ public/lifestyle[[:space:]]photography/*.jpg filter=lfs diff=lfs merge=lfs -text
 public/lifestyle[[:space:]]photography/*.png filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
